--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Dashboard</title>
   <!-- import CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+  <link rel="stylesheet" href="/asset/css/index.css">
   <style>
     a { color: white; }
     .el-table .warning-row { background: oldlace; }
@@ -133,8 +133,8 @@
 
   </div>
   <!-- import JavaScript -->
-  <script src="https://unpkg.com/vue/dist/vue.js"></script>
-  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+  <script src="/asset/js/vue.js"></script>
+  <script src="/asset/js/index.js"></script>
   <!-- vue main -->
   <script>
     new Vue({
