--- a/src/views/login.html
+++ b/src/views/login.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Login</title>
   <!-- import CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+  <link rel="stylesheet" href="/asset/css/index.css">
   <!-- import JavaScript -->
-  <script src="https://unpkg.com/vue/dist/vue.js"></script>
-  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+  <script src="/asset/js/vue.js"></script>
+  <script src="/asset/js/index.js"></script>
 </head>
 <body>
   <div id="app">
